syntax = "proto3";//协议版本
option optimize_for = SPEED;//加快解析
option java_package = "top.jolyoulu.codec2";//生成到那个包下
option java_outer_classname = "MyDataInfo";//生成的外部类名，就是生成的文件名
//protobuf 使用message 管理多个使用message
message MyMessage{
  //定义一个枚举类型
  enum DataType{
      //proto3 要求enum编号必须0开始
      StudentType = 0;
      WorkerType = 1;
  }
  //用data_type关联的是enum DataType 来标识传入的是哪一个 枚举类型
  DataType data_type = 1;
  //表示在MyMessage 出现student/worker其中一个类型，节省空间
  oneof dataBody {
    Student student = 2;
    Worker worker = 3;
  }
}
message Student{
  //指定Student的属性 名称 序号
  int32 id = 1;
  string name = 2;
}
message Worker{
  string name = 1;
  int32 age = 2;
}